style: clean footer copy

--- a/index.html
+++ b/index.html
@@ -12,4 +12,4 @@
 <li><a href="https://github.com/berkeleyo/azure-cost-ops-automation">Cost Ops</a></li>
 <li><a href="https://github.com/berkeleyo/fortinet-azure-sdwan-ipsec">Fortinet SD-WAN/IPsec → Azure</a></li>
 </ul>
-<p>Full portfolio on <a href="https://github.com/berkeleyo">GitHub</a>. <small>Built with ChatGPT-assisted automation.</small></p>
+<p>Full portfolio on <a href="https://github.com/berkeleyo">GitHub</a>.</p>
