style: minor layout polish

--- a/index.html
+++ b/index.html
@@ -13,3 +13,9 @@
 <li><a href="https://github.com/berkeleyo/fortinet-azure-sdwan-ipsec">Fortinet SD-WAN/IPsec → Azure</a></li>
 </ul>
 <p>Full portfolio on <a href="https://github.com/berkeleyo">GitHub</a>.</p>
+<style>
+  body{max-width:960px;margin:auto}
+  h1{margin-top:1.2rem}
+  a{font-weight:600}
+  .muted{opacity:.7}
+</style>
