meta: add SEO/OG tags

--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 ﻿<!doctype html><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Berkeley • Cloud Engineer</title>
+<meta name="description" content="Berkeley — Cloud Engineer. Azure, IaC, automation, security, networking.">
+<meta property="og:title" content="Berkeley — Cloud Engineer">
+<meta property="og:description" content="Azure | IaC | Automation | Security | Networking">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://berkeleyo.github.io/">
 <link rel="stylesheet" href="https://unpkg.com/sakura.css/css/sakura.css">
 <h1>Berkeley — Cloud Engineer</h1>
 <p>I build reliable Azure platforms with IaC, CI/CD, security automation, and cost controls.</p>
