style: update site header/tagline (technical-expert tone)

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta property="og:url" content="https://berkeleyo.github.io/">
 <link rel="stylesheet" href="https://unpkg.com/sakura.css/css/sakura.css">
 <h1>Berkeley — Cloud Engineer</h1>
-<p>I build reliable Azure platforms with IaC, CI/CD, security automation, and cost controls.</p>
+<p>I build reliable Azure platforms with automation, observability, and secure enterprise integration.</p>
 <h2>Featured Projects</h2>
 <ul>
 <li><a href="https://github.com/berkeleyo/azure-governance-policy-bicep">Azure Governance (Policy-as-Code)</a></li>
@@ -17,7 +17,7 @@
 <li><a href="https://github.com/berkeleyo/azure-cost-ops-automation">Cost Ops</a></li>
 <li><a href="https://github.com/berkeleyo/fortinet-azure-sdwan-ipsec">Fortinet SD-WAN/IPsec → Azure</a></li>
 </ul>
-<p>Full portfolio on <a href="https://github.com/berkeleyo">GitHub</a>.</p>
+<p>I build reliable Azure platforms with automation, observability, and secure enterprise integration.</p>
 <style>
   body{max-width:960px;margin:auto}
   h1{margin-top:1.2rem}
