--- a/index.html
+++ b/index.html
@@ -74,5 +74,25 @@
 <footer>
   <p>Portfolio • <a href="https://github.com/berkeleyo">github.com/berkeleyo</a> • <a href="https://www.linkedin.com/in/berkeleyo">linkedin.com/in/berkeleyo</a></p>
 </footer>
+<h2>Tech I use</h2>
+<div style='display:flex;flex-wrap:wrap;gap:8px'>
+  <img alt='AWS' src='https://img.shields.io/badge/AWS-232F3E?logo=amazonwebservices&logoColor=white'>
+  <img alt='Azure' src='https://img.shields.io/badge/Azure-0078D4?logo=microsoftazure&logoColor=white'>
+  <img alt='GCP' src='https://img.shields.io/badge/GCP-4285F4?logo=googlecloud&logoColor=white'>
+  <img alt='Kubernetes' src='https://img.shields.io/badge/Kubernetes-326CE5?logo=kubernetes&logoColor=white'>
+  <img alt='Docker' src='https://img.shields.io/badge/Docker-2496ED?logo=docker&logoColor=white'>
+  <img alt='Terraform' src='https://img.shields.io/badge/Terraform-7B42BC?logo=terraform&logoColor=white'>
+  <img alt='PowerShell' src='https://img.shields.io/badge/PowerShell-5391FE?logo=powershell&logoColor=white'>
+  <img alt='GitHub Actions' src='https://img.shields.io/badge/GitHub%20Actions-2088FF?logo=githubactions&logoColor=white'>
+  <img alt='Azure DevOps' src='https://img.shields.io/badge/Azure%20DevOps-0078D7?logo=azuredevops&logoColor=white'>
+  <img alt='Defender' src='https://img.shields.io/badge/Defender-3A96DD?logo=microsoftdefender&logoColor=white'>
+  <img alt='Intune' src='https://img.shields.io/badge/Intune-0078D4?logo=microsoftintune&logoColor=white'>
+  <img alt='Grafana' src='https://img.shields.io/badge/Grafana-F46800?logo=grafana&logoColor=white'>
+  <img alt='Fortinet' src='https://img.shields.io/badge/Fortinet-EE3124?logo=fortinet&logoColor=white'>
+  <img alt='Linux' src='https://img.shields.io/badge/Linux-FCC624?logo=linux&logoColor=black'>
+  <img alt='Windows' src='https://img.shields.io/badge/Windows-0078D6?logo=windows&logoColor=white'>
+  <img alt='SQL' src='https://img.shields.io/badge/SQL-025E8C?logo=databricks&logoColor=white'>
+</div>
 </html>
+
 
