site: add AWS/GCP alert-to-Teams projects

--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
 
 <h2>More</h2>
 <ul>
-  <li><a href="https://github.com/berkeleyo/intune-win32-packages">Intune Win32 Packaging</a></li>
+  <li><a href="https://github.com/berkeleyo/gcp-teams-alerts">GCP: Monitoring → Function → Teams</a></li>
+<li><a href="https://github.com/berkeleyo/aws-teams-alerts">AWS: CloudWatch → Lambda → Teams</a></li>
+<li><a href="https://github.com/berkeleyo/intune-win32-packages">Intune Win32 Packaging</a></li>
   <li><a href="https://github.com/berkeleyo/unifi-azure-migration-runbook">UniFi Controller Migration (Azure)</a></li>
   <li><a href="https://github.com/berkeleyo/azure-monitor-teams-notifications">Azure Monitor → Teams</a></li>
   <li><a href="https://github.com/berkeleyo/grafana-backup-monitoring">Grafana Backup Health</a></li>
@@ -94,5 +96,6 @@
   <img alt='SQL' src='https://img.shields.io/badge/SQL-025E8C?logo=databricks&logoColor=white'>
 </div>
 </html>
+
 
 
